# SPDX-FileCopyrightText: 2024 Ledger SAS
#
# SPDX-License-Identifier: Apache-2.0 OR BSD-3-Clause

[package]
name = "shield"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0 OR BSD-3-Clause"

[dependencies]
shield-macros = { path = "macros", version="0.1" }
sentry-uapi = { git = "https://github.com/camelot-os/sentry-kernel.git", branch="main", version="0.4"}
