# SPDX-FileCopyrightText: 2024 Ledger SAS
# SPDX-FileCopyrightText: 2025 Stephane N (ANSSI)
#
# SPDX-License-Identifier: Apache-2.0 OR BSD-3-Clause

[package]
name = "shield"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0 OR BSD-3-Clause"
description = "Sentry kernel high level (Shield) user API implementation"
categories = ["os", "no-std", "camelot", "sentry"]
repository = "https://github.com/camelot-os/sentry-kernel"
exclude = [
    "/tests",
]

[dependencies]
shield-macros = { path = "macros", version="0.1" }
sentry-uapi = { git = "https://github.com/camelot-os/sentry-kernel.git", branch="main", version="0.4"}
